# leanPhysicalIsolate

./: .gitignore  CMakeLists.txt  README.md  audit.sh  build.sh  lpi_evolve.sh  main_task.md  run_pipeline.sh
audit/: 01_inventory.md  02_repl_commands.md  03_source_hash.txt  04_design.md  05_implementation_index.md  06_runtime_strategy.md  07_results_5_tasks.jsonl  07_summary_5_tasks.json  08_results_50_tasks.jsonl  08_summary_50_tasks.json  09_final_validation.md  10_isolation_check.json  10_memory_check.jsonl  10_memory_check_summary.json  10_phase7to12_summary.md  10_requirements_validation.json  10_semantic_equivalence.jsonl  10_semantic_equivalence_summary.json  11_results_100_tasks.jsonl  11_summary_100_tasks.json  12_results_200_tasks.jsonl  12_summary_200_tasks.json  13_memory_check_after_500.json  13_results_500_tasks.jsonl  13_summary_500_tasks.json  14_execution_matrix.md  15_rule_compliance_note.md
cmake/: CMakeLists.txt
code_cmake/: CMakeLists.txt  build.sh  collect_evidence.sh  run.sh  smoke_test.sh  validate.sh
code_generated/lean_samples/: sample01_arith.lean  sample02_trivial.lean  sample03_double.lean  sample04_color.lean  sample05_point.lean  sample06_list.lean  sample07_add_comm.lean  sample08_factorial.lean  sample09_lambda.lean  sample10_class.lean
code_runtime/include/: instance_manager.hpp  leanffi.hpp  scheduler.hpp
code_runtime/src/: instance_manager.cpp  leanffi.cpp  memory_check.cpp  orchestrator.cpp  unit_test.cpp  validate_all.cpp  validate_isolation.cpp  validate_requirements.cpp  validate_semantic.cpp
code_scheduler/src/: scheduler.cpp
evidence_main/: main.cpp
instance_manager/: main.cpp
leanffi/: main.cpp
random_test/: main.cpp
reports/: audit.md  audit_19efadebcd5.json  audit_19efb3a6136.json  audit_19efb3aa45a.json  audit_19efc15f19f.json  audit_19efcf2bca7.json  audit_19efcf30d6d.json  audit_19efdcdae5b.json  audit_19efdcdf723.json  audit_19eff851885.json  audit_19eff85a941.json  audit_19f006202e6.json  audit_19f013cb98e.json  audit_19f013e12d2.json  audit_19f013e5b27.json  audit_19f0219e92f.json  audit_19f021aac34.json  audit_19f02f45d66.json  audit_19f02f4920e.json  audit_19f02f4fcb2.json  audit_19f02f52fc1.json  audit_19f02f5546f.json  audit_19f02f55649.json  audit_19f02f55c6f.json  audit_19f02f5b467.json  audit_19f03d03d18.json  audit_19f03d0b582.json  audit_19f03d11e70.json  audit_19f03d189f4.json  audit_19f03d193a8.json  audit_19f03d1bd0b.json  audit_19f03d1f523.json  audit_19f04ab8cae.json  audit_19f04abd2f9.json  audit_19f05875e16.json  audit_19f0587b6fd.json  audit_19f066360da.json  audit_19f0663bdb9.json  audit_19f073f5aa1.json  audit_19f073fc59c.json  (+35 more)
requirements/: R001_19efadebcd5.json  R001_19efb3a6136.json  R001_19efb3aa45a.json  R001_19efc15f19f.json  R001_19efcf2bca7.json  R001_19efcf30d6d.json  R001_19efcf30dda.json  R001_19efdcdae5b.json  R001_19efdcdf723.json  R001_19eff851885.json  R001_19eff85a941.json  R001_19eff85c4f2.json  R001_19f006202e6.json  R001_19f006218d9.json  R001_19f013cb98e.json  R001_19f013e12d2.json  R001_19f013e5b27.json  R001_19f013e5b92.json  R001_19f0219999e.json  R001_19f0219e92f.json  R001_19f021aac34.json  R001_19f021ac8c3.json  R001_19f02f45d66.json  R001_19f02f4920e.json  R001_19f02f4fcb2.json  R001_19f02f52fc1.json  R001_19f02f53803.json  R001_19f02f5546f.json  R001_19f02f55477.json  R001_19f02f55649.json  R001_19f02f55c6f.json  R001_19f02f5b467.json  R001_19f03d03d18.json  R001_19f03d0b582.json  R001_19f03d11e70.json  R001_19f03d15832.json  R001_19f03d189f4.json  R001_19f03d191e0.json  R001_19f03d193a8.json  R001_19f03d1bd0b.json  (+50 more)
requirements/audit/: REQ-005.md
requirements/core/: 01_core.md  REQ-001.md  REQ-002.md
requirements/ffi/: 01_ffi.md  REQ-003.md
requirements/memory/: REQ-004.md
requirements/performance/: 01_performance.md
requirements/scheduler/: 01_scheduler.md  REQ-006.md
requirements/system/: 01_system.md
requirements/validation/: REQ-008.md
requirements_main/: main.cpp
scheduler/: main.cpp
src/: corpus_sampler.cpp  corpus_sampler.h  evidence.cpp  evidence.h  ffi_generator.cpp  ffi_generator.h  goal_state.cpp  goal_state.h  instance_manager.cpp  instance_manager.h  json_helpers.cpp  json_helpers.h  json_min.cpp  json_min.h  leanffi.cpp  leanffi.h  logger.cpp  logger.h  main.cpp  memory_monitor.cpp  memory_monitor.h  mock_repl.cpp  orchestrator.cpp  orchestrator.h  pantograph_bridge.cpp  pantograph_bridge.h  pantograph_protocol.cpp  pantograph_protocol.h  random_test.cpp  random_test.h  requirements.cpp  requirements.h  result.cpp  result.h  scheduler.cpp  scheduler.h  sha256.h  snapshot.cpp  snapshot.h  sys_helpers.h  (+4 more)
validation/: main.cpp
